--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,5 +52,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "https://college-backend-g7ta.onrender.com"
 }
